@@ -1,42 +1,38 @@
 package walaniam.avalanches.mongo;
 
 import com.microsoft.azure.functions.ExecutionContext;
+import com.mongodb.client.FindIterable;
+import com.mongodb.client.model.Filters;
 import com.mongodb.client.model.IndexOptions;
 import com.mongodb.client.model.Indexes;
 import com.mongodb.client.model.Sorts;
 import com.mongodb.client.result.InsertOneResult;
 import org.bson.BsonString;
 import org.bson.Document;
-import walaniam.avalanches.persistence.AvalancheReport;
-import walaniam.avalanches.persistence.AvalancheReportRepository;
+import org.bson.conversions.Bson;
+import walaniam.avalanches.persistence.BinaryReport;
+import walaniam.avalanches.persistence.BinaryReportRepository;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
-import java.util.TreeSet;
+import java.time.LocalDate;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static walaniam.avalanches.common.logging.LoggingUtils.logInfo;
 
-public class AvalancheReportMongoRepository implements AvalancheReportRepository {
+public class BinaryReportMongoRepository implements BinaryReportRepository {
 
-    private static final Set<IndexConfig> REQUIRED_INDEXES = Set.of(
-        new IndexConfig("date", false, false),
-        new IndexConfig("expirationDate", false, false)
-    );
+    private static final Set<IndexConfig> REQUIRED_INDEXES = Collections.emptySet();
 
     private static final String DB_NAME = "avalanche";
-    private static final String COLLECTION_NAME = "reports";
+    private static final String COLLECTION_NAME = "binaries";
 
     private final ExecutionContext context;
-    private final MongoClientExecutor<AvalancheReport> mongoExecutor;
+    private final MongoClientExecutor<BinaryReport> mongoExecutor;
 
-    public AvalancheReportMongoRepository(ExecutionContext context, String connectionString) {
+    public BinaryReportMongoRepository(ExecutionContext context, String connectionString) {
         this.context = context;
-        this.mongoExecutor = new MongoClientExecutor<>(connectionString, DB_NAME, COLLECTION_NAME, AvalancheReport.class);
+        this.mongoExecutor = new MongoClientExecutor<>(connectionString, DB_NAME, COLLECTION_NAME, BinaryReport.class);
         this.mongoExecutor.execute(collection -> {
-
-//            dropIndexes(collection);
 
             Set<String> existingIndexes = collection.listIndexes()
                 .map(Document::toBsonDocument)
@@ -65,42 +61,36 @@ public class AvalancheReportMongoRepository implements AvalancheReportRepository
         });
     }
 
-//    private static void dropIndexes(MongoCollection<AvalancheReport> collection) {
-//        if (collection.countDocuments() == 0) {
-//            Set<String> indexes = collection.listIndexes()
-//                .map(Document::toBsonDocument)
-//                .map(it -> it.getString("name"))
-//                .map(BsonString::getValue)
-//                .into(new TreeSet<>());
-//            for (String existingIndex : indexes) {
-//                for (IndexConfig indexConfig : REQUIRED_INDEXES) {
-//                    if (existingIndex.contains(indexConfig.name())) {
-//                        collection.dropIndex(existingIndex);
-//                        break;
-//                    }
-//                }
-//            }
-//        }
-//    }
-
     @Override
-    public void save(AvalancheReport report) {
-        logInfo(context, "Saving report: %s", report);
+    public void upsert(BinaryReport document) {
+        logInfo(context, "Saving binary: %s", document);
         mongoExecutor.execute(collection -> {
-            InsertOneResult insertResult = collection.insertOne(report);
+            InsertOneResult insertResult = collection.insertOne(document);
             logInfo(context, "Inserted: %s", insertResult);
         });
     }
 
     @Override
-    public List<AvalancheReport> getLatest(int limit) {
+    public Optional<BinaryReport> findByDay(LocalDate day) {
+        return mongoExecutor.executeWithResult(collection -> {
+            Bson filter = Filters.eq("day", day);
+            logInfo(context, "find pdf report by filter=%s", filter);
+            FindIterable<BinaryReport> documents = collection.find(filter);
+            BinaryReport binaryReport = documents.first();
+            logInfo(context, "Found report: %s", binaryReport);
+            return Optional.ofNullable(binaryReport);
+        });
+    }
+
+    @Override
+    public List<BinaryReport> getLatest(int limit) {
         logInfo(context, "Getting %s latest reports", limit);
-        if (limit < 0 || limit > 1000) {
+        if (limit < 0 || limit > 10) {
             throw new IllegalArgumentException("Limit must be in <0, 1000>");
         }
         return mongoExecutor.executeWithResult(collection -> collection
-            .find(AvalancheReport.class)
-            .sort(Sorts.descending("expirationDate"))
+            .find(BinaryReport.class)
+            .sort(Sorts.descending("day"))
             .limit(limit)
             .into(new ArrayList<>()));
     }
